[package]
name = "heretek-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heretek"
path = "src/main.rs"

[dependencies]
heretek-engine = { path = "../heretek-engine" }
heretek-predictor = { path = "../heretek-predictor" }
heretek-error = { path = "../heretek-error" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
proptest = "1"
